--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8000:80"
+      - "9003:9003" # Mapeie a porta do Xdebug
     volumes:
       - .:/var/www/html
     environment:
