--- a/.env.testing
+++ b/.env.testing
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:+WkqkSyzsNQfnnYsQY25s73JjoOW/0gmX1MCLbSfdPU=
 APP_DEBUG=true
 APP_URL=http://localhost
