--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@algolia/autocomplete-js": "^1.17.0",
+    "@algolia/autocomplete-theme-classic": "^1.17.0",
     "@kyvg/vue3-notification": "^3.2.1",
+    "algoliasearch": "^4.22.1",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "instantsearch.css": "^8.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.3.0"
   },
