--- a/backend/.env.testing
+++ b/backend/.env.testing
@@ -11,6 +11,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 DB_DATABASE=:memory:
 
+ALGOLIA_APP_ID=XZML7B8NSQ
+ALGOLIA_SECRET=c7f5b9dad7b429418cf140b9badc65c3
+
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
