--- a/backend/composer.json
+++ b/backend/composer.json
@@ -17,6 +17,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "larastan/larastan": "^2.0",
+        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.14",
         "laravel/sail": "^1.18",
         "laravel/telescope": "^5.0",
