--- a/backend/.env.testing
+++ b/backend/.env.testing
@@ -25,18 +25,17 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_CLIENT=predis
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
+MAIL_DRIVER=smtp
+MAIL_HOST=mailcatcher
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
