--- a/backend/.env.example
+++ b/backend/.env.example
@@ -29,8 +29,8 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 REDIS_CLIENT=predis
 
-ALGOLIA_APP_ID=XZML7B8NSQ
-ALGOLIA_SECRET=c7f5b9dad7b429418cf140b9badc65c3
+ALGOLIA_APP_ID=
+ALGOLIA_SECRET=
 
 # MAIL_MAILER=smtp
 # MAIL_HOST=mailpit
